--- a/serverless.yml
+++ b/serverless.yml
@@ -21,10 +21,23 @@ provider:
   #
   #environment: ${file(env.yml):${self:provider.stage}}
 
+   iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:DescribeTable
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
+      Resource: "arn:aws:dynamodb:us-west-2:*:*"
+
 functions:
-  hello:
-    handler: handler.hello
+    handler: create.main
     events:
       - http:
-          path: hello
-          method: get
+          path: ingredients
+          method: post
+          cors: true
+          authorizer: aws_iam
