add function to find ingredient in the database by ingredientId

--- a/serverless.yml
+++ b/serverless.yml
@@ -42,3 +42,12 @@ functions:
           method: post
           cors: true
           authorizer: aws_iam
+  
+  get:
+    handler: get.main
+    events:
+      - http:
+          path: ingredients/{id}
+          method: get
+          cors: true
+          authorizer: aws_iam
