add ad test function to get list of indregients asssociated with a userId

--- a/serverless.yml
+++ b/serverless.yml
@@ -51,3 +51,12 @@ functions:
           method: get
           cors: true
           authorizer: aws_iam
+
+  list: 
+    handler: list.main
+    events: 
+      - http:
+          path: ingedients
+          method: get
+          cors: true
+          authorizer: aws_iam
