add function to update ingreients in the database

--- a/serverless.yml
+++ b/serverless.yml
@@ -60,3 +60,12 @@ functions:
           method: get
           cors: true
           authorizer: aws_iam
+
+  update:
+    handler: update.main
+    events:
+      - http:
+          path: ingredients/{id}
+          method: put
+          cors: true
+          authorizer: aws_iam
