--- a/serverless.yml
+++ b/serverless.yml
@@ -69,3 +69,12 @@ functions:
           method: put
           cors: true
           authorizer: aws_iam
+
+  delete:
+    handler: delete.main
+    events:
+      - http:
+          path: ingredients/{id}
+          method: delete
+          cors: true
+          authorizer: aws_iam 
