--- a/food-waste-client/package.json
+++ b/food-waste-client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
