--- a/food-waste-api/serverless.yml
+++ b/food-waste-api/serverless.yml
@@ -12,7 +12,7 @@ plugins:
 provider:
   name: aws
   runtime: nodejs8.10
-  stage: dev
+  stage: prod
   region: us-west-2
   # To load environment variables externally
   # rename env.example to env.yml and uncomment
