--- a/food-waste-client/package.json
+++ b/food-waste-client/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "aws-amplify": "^1.1.32",
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "react": "^16.8.6",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.8.6",
@@ -15,6 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "aws s3 sync build/ s3://food-waste-recipe --p KatlinEpicodus --delete",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
