--- a/food-waste-client/package.json
+++ b/food-waste-client/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.8.6",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "reactstrap": "^8.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
